# maxbot-api-client-python

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
docs/bots/: GetBot.md  PatchBot.md
docs/chats/: AddMembers.md  DeleteAdmin.md  DeleteChat.md  DeleteMember.md  EditChat.md  GetChat.md  GetChatAdmins.md  GetChatMembers.md  GetChatMembership.md  GetChats.md  GetPinnedMessage.md  LeaveChat.md  PinMessage.md  SendAction.md  SetChatAdmins.md  UnpinMessage.md
docs/helpers/: SendFile.md
docs/messages/: AnswerCallback.md  DeleteMessage.md  EditMessage.md  GetMessage.md  GetMessages.md  GetVideoInfo.md  SendMessage.md
docs/objects/: Chat.md  Message.md  NewMessageBody.md  Update.md  User.md
docs/subscriptions/: GetSubscriptions.md  GetUpdates.md  Subscribe.md  Unsubscribe.md
docs/upload/: UploadFile.md
examples/async/: GetBotAsync.py  GetUpdatesAsync.py  SendFileAsync.py  SendMessageAsync.py  UploadFileAsync.py  get_bot_async.py  get_updates_async.py  send_file_async.py  send_message_async.py  upload_file_async.py
examples/sync/: GetBot.py  GetUpdates.py  SendFile.py  SendMessage.py  UploadFile.py  get_bot.py  get_updates.py  send_file.py  send_message.py  upload_file.py
maxbot_api_client_python/: __init__.py  api.py  client.py  exceptions.py  utils.py
maxbot_api_client_python/tools/: __init__.py  bots.py  chats.py  helpers.py  messages.py  subscriptions.py  uploads.py
maxbot_api_client_python/types/: __init__.py  constants.py  models.py
